package org.example;

public interface Habitos {
    void ejercicio();
    void alimentacion();
    void bebida();
}
