package org.example;

public class Hora {

    private int hora;

    public Hora(int hora) {
            this.hora = hora;
    }

    public int obtenerHora() {
        return hora;
    }
}
