package org.example;

public abstract class Persona implements Habitos{

    protected int edad;
    private float peso;
    public String nombre;
    public static final int estimacionVida = 85;

    public void despertarse() {
    }

    private void dormirse() {
    }
}
